[package]
name = "orderbook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
either = "1.10.0"
erased-serde = "0.4.4"
num = "0.4.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
